--- a/codigo/assets/pages/metas.html
+++ b/codigo/assets/pages/metas.html
@@ -28,6 +28,7 @@
       padding: 15px;
       border-radius: 10px;
       margin-top: 10px;
+      margin-left: 10px;
       display: flex;
       flex-direction: column;
       align-items: center;
